@@ -1,6 +1,7 @@
 ChangeLog:
 --------------------
 [1.0.12]
+- modulation strings for the dvbv5 output
 
 [1.0.11] 2021-03-11
 - work around iconv on FreeBSD not knowing about ISO-6397-2
